fix (components/menu.sass) .menu block z-index: 1

--- a/src/styles/components/menu.sass
+++ b/src/styles/components/menu.sass
@@ -3,6 +3,7 @@
   font-size: 0
   @include breakpoint(max-width 768px)
     position: fixed
+    z-index: 1
     top: 0
     left: 0
     @include size(220px, 100%)
@@ -73,3 +74,14 @@
 
     .icon
       @include size(88px, 24px)
+
+  &__social
+    position: absolute
+    bottom: 0
+    left: 0
+    width: 100%
+    opacity: .5
+    padding-left: 20px
+    display: none
+    @include breakpoint(max-width 768px)
+      display: block
